2007-12-12  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-17-09
	* fix (two) bugs regarding the propagation of label name changes
	to downstream InputTag parameters

2007-11-29  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-17-08
	* OnlineConverter closes DatabaseConnection in finalize()

2007-11-23  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-17-07
	* don't consider endpaths when it comes to streams
	* update the search if options were changed

2007-11-22  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-17-06
	* converter: have ConverterBase.getConfiguration(int key) throw a 
	ConverterExcpetion if the key is not valid (UB)

2007-11-21  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-17-05
	* various fixes (parser[JH]/browser[UB]/gui)

2007-11-21  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-17-04
	* minor bug fixes to the GUI

2007-11-20  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-17-03
	* correctly propagate process name for new configurations
	* fix bug where the context menu of the configuration tree would
	still refer to the old release
	* disallow the configuration tree as a drop target if a search is
	active

2007-11-20  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-17-02
	* REALLY fix bug reported by MZ (tested)
	* add 'Search' field to import configuration panel

2007-11-20  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-17-01
	* parser fixes (JH)
	* fix bug reported by MZ which would prevent configuration exports
	* fid PythonParser bug (handle parentheses within string values
	correctly)
	* reactivate the last selected node after canceling the search
	* add Options meny and a checkbox to enable/disable InputTag
	tracking (per path, count the number of InputTag values with no
	matching upstream label within that path)
